Fix hold to start on ios

--- a/client/assets/styles/main.scss
+++ b/client/assets/styles/main.scss
@@ -64,6 +64,11 @@ html, body {
     overflow: hidden;
 }
 
+*:focus {
+  outline: none!important;
+}
+
+
 .panel {
   height: 100%;
   width: 100%;
@@ -82,7 +87,7 @@ html, body {
   white-space: normal;
   opacity: 0.3;
 
-  &:active {
+  &.active {
     opacity: 1;
   }
 }
